@@ -21,6 +21,12 @@
 
 2007-09-20  Zeeshan Ali  <zeenix@gstreamer.net>
 
+	* src/av-cp-renderercombo.c:
+
+	Don't add an already added renderer to the combo.
+
+2007-09-20  Zeeshan Ali  <zeenix@gstreamer.net>
+
 	* src/gupnp-av-cp.glade:
 
 	Some random UI fixes and re-arrangment.
